--- a/task1.ipynb
+++ b/task1.ipynb
@@ -5,7 +5,7 @@
    "id": "6249625c",
    "metadata": {},
    "source": [
-    "<h1><center>Mentorship Program - Task 1 [BONUS]</center></h1>"
+    "# Mentorship Program - Task 1 [BONUS]"
    ]
   },
   {
@@ -519,7 +519,7 @@
    "id": "20246cd8",
    "metadata": {},
    "source": [
-    "<h1><center>The end</center></h1>"
+    "# The end "
    ]
   }
  ],
